--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -19,7 +19,65 @@
       </nav>
     </header>
     <main>
-      <a href="#">Hello World &rarr;</a>
+      <div id="banner">
+        <div class="wrapper">
+          <h2>Hello World</h2>
+        </div>
+      </div>
+      <div id="services" class="wrapper">
+        <h2>Our Services</h2>
+        <div class="card">
+          <i class="fa-regular fa-bell"></i>
+          <h3>Service 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+            nostrum laudantium magni, deserunt sapiente doloremque consectetur
+            voluptate debitis vitae natus.
+          </p>
+          <a href="#">Learn More &rarr;</a>
+        </div>
+        <div class="card">
+          <i class="fa-regular fa-bell"></i>
+          <h3>Service 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+            nostrum laudantium magni, deserunt sapiente doloremque consectetur
+            voluptate debitis vitae natus.
+          </p>
+          <a href="#">Learn More &rarr;</a>
+        </div>
+        <div class="card">
+          <i class="fa-regular fa-bell"></i>
+          <h3>Service 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+            nostrum laudantium magni, deserunt sapiente doloremque consectetur
+            voluptate debitis vitae natus.
+          </p>
+          <a href="#">Learn More &rarr;</a>
+        </div>
+        <div class="card">
+          <i class="fa-regular fa-bell"></i>
+          <h3>Service 4</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+            nostrum laudantium magni, deserunt sapiente doloremque consectetur
+            voluptate debitis vitae natus.
+          </p>
+          <a href="#">Learn More &rarr;</a>
+        </div>
+        <div class="card">
+          <i class="fa-regular fa-bell"></i>
+          <h3>Service 5</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+            nostrum laudantium magni, deserunt sapiente doloremque consectetur
+            voluptate debitis vitae natus.
+          </p>
+          <a href="#">Learn More &rarr;</a>
+        </div>
+      </div>
+      <!-- End of Services  -->
     </main>
     <script
       src="https://kit.fontawesome.com/24ba056144.js"
