--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -8,20 +8,33 @@
   </head>
   <body>
     <header class="wrapper">
-      <p id="logo">My Company</p>
+      <p id="logo" class="title">My Company</p>
       <nav>
         <ul>
           <li>About</li>
           <li>Services</li>
+          <li>Blog</li>
           <li>Contact</li>
-          <li><a href="#">Signup</a></li>
+          <li>Login</li>
+          <li>Signup</li>
         </ul>
       </nav>
     </header>
     <main>
       <div id="banner">
         <div class="wrapper">
-          <h2>Hello World</h2>
+          <h1>This is a Level 1 Heading</h1>
+          <div class="break"></div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+            laborum animi, cum eligendi veritatis exercitationem maiores
+            officiis doloremque, consequatur in omnis eveniet cumque porro nulla
+            alias rem dicta quo ratione!
+          </p>
+          <ul class="float">
+            <li><button type="button">Sign Up</button></li>
+            <li><a href="#">Learn More</a></li>
+          </ul>
         </div>
       </div>
       <div id="services" class="wrapper">
@@ -79,6 +92,15 @@
       </div>
       <!-- End of Services  -->
     </main>
+    <footer>
+      <!-- <div class="wrapper"> -->
+      <p id="logo">&copy My Company 2023</p>
+      <ul>
+        <li>Privacy Policy</li>
+        <li>Terms &amp; Conditions</li>
+      </ul>
+      <!-- </div> -->
+    </footer>
     <script
       src="https://kit.fontawesome.com/24ba056144.js"
       crossorigin="anonymous"
