--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>GitHub Landing</title>
   </head>
   <body>
-    <a href="Website 1/index.html">Font Awesome Site</a>
+    <h1>John F Projects</h1>
+    <ul>
+      <li><a href="Website 1/index.html">Font Awesome Site</a></li>
+    </ul>
   </body>
 </html>
