--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>GitHub Landing</title>
   </head>
   <body>
-    <h1>John F Projects</h1>
-    <ul>
-      <li><a href="Website 1/index.html">Font Awesome Site</a></li>
-    </ul>
+    <div class="cards">
+      <h1>John F Projects</h1>
+      <ul>
+        <li><a href="Website 1/index.html">&rarr; FlexBox Homepage</a></li>
+      </ul>
+    </div>
   </body>
 </html>
