--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>John F Projects</h1>
       <ul>
         <li><a href="Website 1/index.html">&rarr; FlexBox Homepage</a></li>
+        <li><a href="grid website/index.html">&rarr; Grid Homepage</a></li>
       </ul>
     </div>
   </body>
