--- a/grid website/index.html
+++ b/grid website/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="grid-wrapper">
-      <p id="logo" class="title">My Company</p>
+      <p class="title">My Company</p>
       <!-- <div class="flex-wrap"> -->
-      <nav class="flex-wrap">
+      <nav class="grid-nav">
         <ul>
           <li>About</li>
           <li>Services</li>
