--- a/grid website/index.html
+++ b/grid website/index.html
@@ -7,7 +7,7 @@
     <title>Grid Exercise</title>
   </head>
   <body>
-    <header class="grid-wrapper">
+    <header class="grid-header">
       <p class="title">My Company</p>
       <!-- <div class="flex-wrap"> -->
       <nav class="grid-nav">
